# tok3n

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  pch.h  tok3n.sln  tok3n.vcxproj  tok3n.vcxproj.filters
dev-tests/Boost.Test/: CMakeLists.txt  main.cpp
dev-tests/doctest/: CMakeLists.txt  main.cpp
examples/: algebraic.h  (+2 more)
examples/algebraic/: CMakeLists.txt  algebraic.cpp  algebraic.vcxproj  algebraic.vcxproj.filters  evaluate.h  evaluate.hpp  parser.h  parser.hpp  print.h  print.hpp
examples/json/: CMakeLists.txt  json.cpp  json.vcxproj  json.vcxproj.filters
include/: CMakeLists.txt
include/k3/: tok3n.h  tok3n.hpp
include/k3/tok3n/: basic.h  basic.hpp  concepts.h  meta.h  modifiers.h  modifiers.hpp  namespace.h  operators.h  operators.hpp  parsers.h  parsers.hpp  result.hpp  span.hpp  types.h
include/tok3n/: concepts.h  meta.h  modifiers.h  operators.h  parsers.h  tok3n.h  types.h
include/tok3n/concepts/: ImplicitlyDefaultConstructible.h  IsParser.h  IsResult.h  Modifier.h  Parser.h  implicitly_default_constructible.h
include/tok3n/meta/: all_same.h  filter.h  filtered_sequence.h  head.h  is_not_type.h  list_cast.h  unwrap_if_single.h
include/tok3n/modifiers/: apply.h  apply_into.h  complete.h  constant.h  delimit.h  exactly.h  fn.h  ignore.h  into.h  into_choice.h  join.h
include/tok3n/operators/: Adaptor.h  Basic.h  Choice.h  Maybe.h  Modifier.h  Not.h  OneOrMore.h  Sequence.h  ZeroOrMore.h  basic.h  maybe.h  one_or_more.h  sequence.h  zero_or_more.h
include/tok3n/parsers/: Declarations.h  Details.h  Result.h
include/tok3n/types/: Input.h  ModifierBase.h  ParserResultOf.h  ParserType.h  Result.h  StaticString.h  Tags.h  static_string.h  tags.h
include/tok3n/utilities/: forward_like.h  meta.h  namespace.h  static_string.h
tests/: CMakeLists.txt  add_tests.cmake  asserts.h  common.h  discover_tests.cmake  include_tests.cmake  pch.cpp  pch.h  run_all_tests.cpp  tests.vcxproj  tests.vcxproj.filters  traits.h  utility.h
tests/asserts/: Concept.h  Constructible.h  Equality.h  Operation.h  Parse.h
tests/char-samples/: adaptor.h  basic.h  char-samples.h  classes.h  compound.h  divergent.h  functions.h  repeat.h  sub_parsers.h
tests/char-tests/: CMakeLists.txt  main.cpp  samples.h  samples.hpp
tests/char-tests/aliases/: apply_filter.cpp  apply_into.cpp  apply_map.cpp  constant.cpp  defaulted.cpp  into.cpp
tests/char-tests/modifiers/: apply.cpp  apply_filter.cpp  apply_into.cpp  complete.cpp  constant.cpp  defaulted.cpp  delimit.cpp  delimit_keep.cpp  exactly.cpp  filter.cpp  fn.cpp  ignore.cpp  into.cpp  into_choice.cpp  join.cpp  map.cpp  multi.cpp  name.cpp  sub.cpp
tests/char-tests/operators/: basic.cpp  choice.cpp  epsilon.cpp  maybe.cpp  not.cpp  one_or_more.cpp  sequence.cpp  zero_or_more.cpp
tests/char-tests/optimizations/: join_exactly_basic_optimization.cpp  join_maybe_basic_optimization.cpp  (+2 more)
tests/common/: CMakeLists.txt
tests/detail-tests/: CMakeLists.txt  main.cpp
tests/enum-samples/: basic.h  enum-samples.h  macros.h
tests/enum-tests/: samples.h
tests/framework/: Assert.h  AssertConcept.h  AssertConstructible.h  AssertEquality.h  AssertOperation.h  AssertParse.h  CMakeLists.txt  Error.h  Fixture.cpp  Fixture.h  FixtureResult.h  Runner.cpp  Runner.h  Test.cpp  Test.h  TestResult.h  assert.h  comparison.h  parse.h  parser_list.h  underlying.h
tests/int-samples/: basic.h  int-samples.h
tests/int-tests/: samples.h
tests/integral-tests/: CMakeLists.txt  main.cpp  samples.h
tests/non-char-tests/: CMakeLists.txt  main.cpp  samples.h  samples.hpp
tests/object-tests/: CMakeLists.txt  main.cpp  samples.h
tests/op_equals-samples/: basic.h  op_equals-samples.h
tests/op_equals-tests/: samples.h
tests/operators/: Choice.h  Not.h  Sequence.h
tests/operators_modifier/: ApplyInto.cpp  ApplyInto.h  ApplyTransform.cpp  Complete.cpp  Complete.h  Constant.cpp  Constant.h  Defaulted.cpp  Defaulted.h  Delimit.cpp  Delimit.h  Exactly.cpp  Exactly.h  Ignore.cpp  Ignore.h  Into.cpp  Into.h  IntoChoice.cpp  IntoChoice.h  Join.cpp  Join.h  Transform.cpp  Transform.h  apply.cpp  apply_into.cpp  complete.cpp  constant.cpp  defaulted.cpp  delimit.cpp  delimit_keep.cpp  exactly.cpp  fn.cpp  ignore.cpp  into.cpp  into_choice.cpp  join.cpp  multi.cpp
tests/operators_regular/: Basic.cpp  Basic.h  Choice.cpp  Choice.h  Maybe.cpp  Maybe.h  Not.cpp  Not.h  OneOrMore.cpp  OneOrMore.h  Sequence.cpp  Sequence.h  ZeroOrMore.cpp  ZeroOrMore.h  basic.cpp  choice.cpp  maybe.cpp  not.cpp  one_or_more.cpp  sequence.cpp  zero_or_more.cpp
tests/parsers_adaptor/: Complete.cpp  Complete.h  Custom.h  Delimit.cpp  Delimit.h  Ignore.cpp  Ignore.h  Join.h  Transform.h  combine.h
tests/parsers_basic/: Literal.cpp  Literal.h  NotChar.cpp  NotChar.h  OneChar.cpp  OneChar.h  combine.h  combine_basic_parsers.cpp  combine_basic_parsers.h
tests/parsers_compound/: Choice.cpp  Choice.h  Sequence.cpp  Sequence.h  combine.h  combine_compound_parsers.cpp  combine_compound_parsers.h
tests/parsers_divergent/: ApplyInto.cpp  ApplyInto.h  ApplyTransform.cpp  CombinedDivergent.cpp  Constant.cpp  Constant.h  Custom.cpp  Custom.h  Defaulted.cpp  Defaulted.h  Into.cpp  Into.h  Join.cpp  Join.h  Transform.cpp  Transform.h  combine.cpp  combine.h
tests/parsers_optimizations/: JoinContiguous.cpp
tests/parsers_repeat/: Delimit.cpp  Exactly.cpp  Exactly.h  Ignore.h  Maybe.cpp  Maybe.h  OneOrMore.cpp  OneOrMore.h  ZeroOrMore.cpp  ZeroOrMore.h  combine.h
tests/samples/: adaptor.h  adaptor.ipp  basic-object-op_equals.ipp  basic-object-structural.ipp  basic.h  classes.h  compound.h  compound.ipp  divergent.h  functions.h  helpers.ipp  macros-object.ipp  macros.h  macros_test.cpp  repeat.h  sub_parsers.h  sub_parsers.ipp  wrappers.h
tests/structural-samples/: basic.h  structural-samples.h
tests/structural-tests/: samples.h
tests/utility_tests/: Result.cpp
tests/wchar_t-samples/: adaptor.h  basic.h  classes.h  compound.h  divergent.h  functions.h  macros.h  repeat.h  sub_parsers.h  wchar_t-samples.h
tests/wchar_t-tests/: samples.h
(+763 files in other folders)
